--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
-[*.{js,jsx}]
+[*.{html,css,js,jsx}]
 indent_style = tab
 indent_size = 4
 trim_trailing_whitespace = true
